# stuff

./: .gitignore  CMakeLists.txt  README.md  cleanup.sh  release.sh
Consumer/: CMakeLists.txt
Consumer/include/Consumer/: CApplication.hpp  CDataConsumer.hpp  EPacketError.hpp
Consumer/include/Consumer/Private/: EPacketError.inl
Consumer/src/: CApplication.cpp  CDataConsumer.cpp  main.cpp
Producer/: CMakeLists.txt
Producer/include/Producer/: CApplication.hpp  CDataProducer.hpp
Producer/src/: CApplication.cpp  CDataProducer.cpp  main.cpp
Utility/: CMakeLists.txt
Utility/include/Utility/: CChecksum.hpp  Common.hpp  TTimestamp.hpp
Utility/include/Utility/IPC/: CSemaphore.hpp  CSharedMemoryReceiver.hpp  CSharedMemorySender.hpp  Common.hpp  IIPCReceiverBackend.hpp  IIPCSenderBackend.hpp
Utility/include/Utility/Private/: TTimestamp.inl
Utility/src/: CChecksum.cpp  Common.cpp
Utility/src/IPC/: CSemaphore.cpp  CSharedMemoryReceiver.cpp  CSharedMemorySender.cpp
